Add jvm note